# CMakeTutorial

./: .gitignore  CMakeLists.txt  LICENSE.txt  NewTestConfig.h.in  README.md  main.cpp  project.bat
mylib/: CMakeLists.txt  math.cpp  math.hpp
